test-suite/typecheck/fail/index_not_array.first
function f(x: Int) -> Int {
  return x[0];
}
